# cudaprep

./: .gitignore  CMakeLists.txt  Makefile  README.md  ReadMe.md  SUMMARY.md  Temp.md  main.cpp  main.cu  main_new_reader.cu  objects.mk  temp.cu
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.linen_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.linen_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.linen_0/H.local_16/: node.properties
Debug/: makefile  sources.mk  subdir.mk
Debug/src/: subdir.mk
cpp_version/: .gitignore  CMakeLists.txt  main.cpp
cpp_version/demo_creator/: .gitignore  CMakeLists.txt
cpp_version/demo_creator/include/: demo_creator.h
cpp_version/demo_creator/src/: demo_creator.cpp
cpp_version/include/: newsimreader.h
cpp_version/metal-src/: Shaders.metal  cpu_kernels.cpp  cpu_kernels.h  metal-main.mm
cpp_version/src/: Variable.h  cpu_kernels.cpp  cpu_kernels.h  cuda_replacements.h  datatemplate.cpp  datatemplate.h  funcs.cpp  funcs.h  newsimreader.cpp  newsimreader.h  overloads.cpp  overloads.h
data/: config.txt  configheaders.txt  dimheaders.txt  dims.txt  encodings.txt
data/formats/: README.md  the-swc.md
data/obtaining-data/: README.md
data/obtaining-data/neuromorpho.org/: README.md
data/obtaining-data/sources/: README.md
data/obtaining-data/sources/h01/: README.md
data/obtaining-data/sources/h01/colab-notebooks/: README.md
results/: dx2.txt  mdx2.txt
src/: Variable.h  controller.cpp  controller.h  cpu_functions.cpp  cpu_functions.h  datatemplate.cpp  datatemplate.h  funcs.cpp  funcs.h  newsimreader.cpp  newsimreader.h  overloads.cpp  overloads.h  particle.cpp  particle.h  simreader.cpp  simreader.h  simulation.cpp  simulation.h  viewer.cpp  viewer.h
